--- a/index.html
+++ b/index.html
@@ -7,46 +7,99 @@
     <link rel="shortcut icon" href="./img/icono.png">
     <title>ArgentinaRelojes | Tienda Online</title>
     <script src="https://kit.fontawesome.com/f112a79015.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="./scss/main.css">
+    <link rel="stylesheet" type="text/css" href="./css/normalize.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Georgian:wght@300;400&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <h1>Bienvenido a ArgentinaRelojes</h1>
-    </header>
-    <body>
-        <h2>Productos más vendidos</h2>
-        <div class="productos">
-            <div class="contenedor_producto">
-                <img src="./img/relojHombreVerde.webp" alt="Reloj" width="20%">
-                <h3>Reloj</h3>
-                <h4>Hombre</h4>
-                <a href="#"><button class="btn">Agregar al carrito</button></a>
-            </div>
-            <div class="contenedor_producto">
-                <img src="./img/relojHombreDorado.webp" alt="Reloj" width="20%">
-                <h3>Reloj</h3>
-                <h4>Hombre</h4>
-                <a href="#"><button class="btn">Agregar al carrito</button></a>
-            </div>
-            <div class="contenedor_producto">
-                <img src="./img/relojHombreNegro.webp" alt="Reloj" width="20%">
-                <h3>Reloj</h3>
-                <h4>Hombre</h4>
-                <a href="#"><button class="btn">Agregar al carrito</button></a>
-            </div>
-            <div class="contenedor_producto">
-                <img src="./img/relojHombreAzul.webp" alt="Reloj" width="20%">
-                <h3>Reloj</h3>
-                <h4>Hombre</h4>
-                <a href="#"><button class="btn">Agregar al carrito</button></a>
-            </div>
-        </div>
-    </body>
-    <footer>
-        <a target="_blank" href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i> Instagram</a>
-        <a target="_blank" href="https://telegram.org/"><i class="fa-brands fa-telegram"></i> Telegram</a>
-        <a target="_blank" href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i> Whatsapp</a>
-    </footer>
+    <div class="grid-container">
 
-    <script src="./js/index.js"></script>
+
+        <!-- header -->
+        <header>
+            <div class="logo">
+                <a href="./index.html"><img src="./img/icono.png" alt="corona"></a>
+            </div>
+            <h1>ArgentinaRelojes</h1>
+            <div class="carrito">
+                <i class="fa-sharp fa-solid fa-cart-shopping"></i>
+            </div>
+        </header>
+
+
+        <!-- main -->
+        <main>
+            <div class="main__container__producto">
+                <h2>Productos más vendidos</h2>
+                <ul class="section__img">
+                    <li>
+                        <a class="a-producto" href="#"><img src="./img/relojHombreVerde.webp" alt="Reloj"></a>
+                        <div class="producto__info">
+                            <h3>Reloj Verde</h3>
+                            <h4>Hombre</h4>
+                            <a href="#"><button class="btn">Agregar al carrito</button></a>
+                        </div>
+                    </li>
+                    <li>
+                        <a class="a-producto" href="#"><img src="./img/relojHombreDorado.webp" alt="Reloj"></a>
+                        <div class="producto__info">
+                            <h3>Reloj Dorado</h3>
+                            <h4>Hombre</h4>
+                            <a href="#"><button class="btn">Agregar al carrito</button></a>
+                        </div>
+                    </li>
+                    <li>
+                        <a class="a-producto" href="#"><img src="./img/relojHombreNegro.webp" alt="Reloj"></a>
+                        <div class="producto__info">
+                            <h3>Reloj Negro</h3>
+                            <h4>Hombre</h4>
+                            <a href="#"><button class="btn">Agregar al carrito</button></a>
+                        </div>
+                    </li>
+                    <li>
+                        <a class="a-producto" href="#"><img src="./img/relojHombreAzul.webp" alt="Reloj"></a>
+                        <div class="producto__info">
+                            <h3>Reloj Azul</h3>
+                            <h4>Hombre</h4>
+                            <a href="#"><button class="btn">Agregar al carrito</button></a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </main>
+
+
+        <!-- footer -->
+        <footer class="footer">
+            <div class="footer-container">
+                <div class="footer__contenedor">
+                    <div class="box__footer">
+                        <div class="logo">
+                            <a href="index.html"><img src="./img/icono.png" alt="basquet"></a>
+                        </div>
+                    </div>
+                    <div class="box__footer">
+                        <h2>ArgentinaRelojes</h2>
+                    </div>
+                    <div class="box__footer">
+                        <h3>Contactenos</h3>
+                        <div class="box__footer__a">
+                            <a target="_blank" href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i> Instagram</a>
+                            <a target="_blank" href="https://telegram.org/"><i class="fa-brands fa-telegram"></i> Telegram</a>
+                            <a target="_blank" href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i> Whatsapp</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="box__copyright">
+                    <hr>
+                    <p>Todos los derechos reservados © 2022 <b>ArgentinaRelojes</b></p>
+                </div>
+            </div>
+        </footer>
+    
+        <script src="./js/index.js"></script>
+    </div>
 </body>
 </html>
