--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
 <body>
     <div class="grid-container">
 
-
         <!-- header -->
         <header>
             <div class="logo">
                 <a href="./index.html"><img src="./img/icono.png" alt="corona"></a>
             </div>
             <h1>ArgentinaRelojes</h1>
+            <!-- <div class="carrito">
+                <i class="fa-sharp fa-solid fa-cart-shopping"></i>
+            </div> -->
         </header>
 
 
