agregando cambios js

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <h2>Productos más vendidos</h2>
         </main>
 
+        <!-- aside -->
         <aside>
             <div class="carrito">
                 <h2>Carrito</h2>
@@ -41,7 +42,11 @@
             <ul id="carrito"></ul>
             <hr>
             <p>Total: <span id="total"></span></p>
-            <button id="boton-vaciar" class="boton">Vaciar</button>
+            <div class="box--comprar-vaciar">
+                <button id="comprar" class="boton2">Comprar</button>
+                <button id="boton--vaciar" class="boton">Vaciar</button>
+            </div>
+            <div id="ticket" class="aside__ticket"></div>
         </aside>
 
         <!-- footer -->
