--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Georgian:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
 <body>
     <div class="grid-container">
@@ -26,9 +27,6 @@
                 <input id="buscar" type="search" placeholder="Buscar producto deseado" aria-label="Search">
                 <button type="submit"><img src="./img/lupa.png" alt="lupa"></button>
             </form>
-            <!-- <div class="carrito">
-                <i class="fa-sharp fa-solid fa-cart-shopping"></i>
-            </div> -->
         </header>
 
 
@@ -83,6 +81,8 @@
             </div>
         </footer>
     
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+        <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <script src="./js/index.js"></script>
     </div>
 </body>
