cambios storage y fetch

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                 <button id="comprar" class="boton2">Comprar</button>
                 <button id="boton--vaciar" class="boton">Vaciar</button>
             </div>
+            <p id="p" class="p"></p>
             <div id="ticket" class="aside__ticket"></div>
         </aside>
 
